[project]
name = 'pyanitools'
version = '0.0.1'
description = "I/O for ANI hdf5 files"

authors = [
    {name="Roman Zubatyuk"},
    {name="Justin S. Smith"},
    {name="Michael Tynes"},
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['pyanitools']